<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:iconifiedByDefault="false"
            android:queryHint="@string/search" />
    </androidx.cardview.widget.CardView>


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:outlineSpotShadowColor="@color/teal_700"
        android:scrollbars="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"

        app:tabMode="scrollable"
        app:tabSelectedTextColor="@color/purple_200"
        app:tabTextColor="@color/black">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/general"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/general"
            android:text="@string/generalIcon" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/tecnology"
            android:text="@string/tecIcon" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#C6ADAD"
            android:icon="@drawable/ball"
            android:text="@string/sportIcon" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/scince"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/science"
            android:text="@string/scinceIcone" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/health"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/health"
            android:text="@string/healthIcon" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/entertain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_baseline_tag_faces_24"
            android:text="@string/enterIcon" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/business"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/business"
            android:text="@string/bussIcon" />


    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_main"
        android:layout_width="match_parent"
        android:layout_height="500dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout"
        tools:listitem="@layout/headline_list_item" />


</androidx.constraintlayout.widget.ConstraintLayout>